Adopt Ascent 0.6.2 Preview.serve for live Grok extra routes (#19)
LiveMain acquires LiveClients in the same Scope, then Preview.serve
with ACP routes in front of static files and stamp reload. Preview
still starts as preview/bgRun from the repo root so grok sessions
use this workspace cwd.